Agregada la libreria a la carpeta de git

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,10 +34,12 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Obligatorio2P2
 excludes=
 file.reference.jaco-mp3-player-0.9.3.jar=C:\\Users\\ivan\\Downloads\\jaco-mp3-player-0.9.3\\jaco-mp3-player-0.9.3.jar
+file.reference.jaco-mp3-player-0.9.3.jar-1=src\\Libreria audio\\jaco-mp3-player-0.9.3.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.jaco-mp3-player-0.9.3.jar}
+    ${file.reference.jaco-mp3-player-0.9.3.jar}:\
+    ${file.reference.jaco-mp3-player-0.9.3.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
